@@ -1,3 +1,10 @@
+2005-05-06  Jan Beulich  <jbeulich@novell.com>
+
+	* gas/macros/dot.s: Don't use pseudo-ops in first column.
+	* gas/macros/dot.l: Match broader range of possible outputs.
+	* gas/macros/purge.l: Likewise.
+	* gas/macros/purge.s: Start generated macro names with an underscore.
+
 2005-05-05  Paul Brook  <paul@codesourcery.com>
 
 	* gas/i386/i386.exp: Don't run divide test on vxworks.
